# LawClick

./: .dockerignore  .gitignore  0_archive_context.md  1_project_context.md  2_active_task.md  AGENTS.md  AGENTS_2.md  Cargo.toml  Dockerfile  LawClick_NEW.code-workspace  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
Prototype/: index.html  package.json
docs/: 1211_架构落地开发总计划_v1.md  API接口文档.md  A线_全站乐高化深度复盘与修复_2026-01-03.md  A线_全站乐高化深度复盘与修复_2026-01-04.md  LawClick_NEW（主线：lawclick-next）A3 红队审计报告（D1）.md  LegalMind设计语言规范.md  TG0_基础设施对齐_子计划.md  TG10_统一检验与纠错_子计划.md  TG10_统一检验与纠错_验收记录.md  TG11_全局搜索_通知闭环_子计划.md  TG11_全局搜索_通知闭环_验收记录.md  TG12_全仓挑刺_2025-12-24.md  TG12_批判性审计_问题与技术债清单.md  TG12_本轮开发批判性检视_2025-12-18.md  TG12_本轮开发批判性检视_2025-12-19.md  TG12_本轮开发批判性检视_2025-12-28.md  TG12_极限标准审计_2025-12-19.md  TG12_极限标准整改闭环_2025-12-19.md  TG12_极限标准整改闭环_2025-12-24.md  TG12_统一回归与纠错_v2_子计划.md  TG12_统一回归与纠错_v2_验收记录.md  TG12_项目现状批判性审计_2025-12-29.md  TG13_Rust原型治理与闭环_2025-12-20.md  TG14_功能真实闭环覆盖矩阵_2025-12-25.md  TG14_极限标准整改闭环_2025-12-25.md  TG15_后台运行机制_队列与上传_2025-12-25.md  TG16_全局审视审查检验_2025-12-26.md  TG17_看板超量截断治理_2025-12-26.md  TG18_看板虚拟列表与分列分页_2025-12-26.md  TG1_身份权限体系统一_子计划.md  TG2_案件端到端闭环_子计划.md  TG3_任务协作与Trello看板_子计划.md  TG3_任务协作与Trello看板_验收记录.md  TG3_看板对齐增强（参照Focalboard_Planka）_子计划.md  TG3_看板对齐增强（参照Focalboard_Planka）_验收记录.md  TG4_计时追踪_子计划.md  TG4_计时追踪_验收记录.md  TG5_文档中心_子计划.md  TG5_文档中心_验收记录.md  TG6_仪表盘_MDI-DIY_子计划.md  (+49 more)
lawclick-next/: .gitignore  analyze-lint.js  batch-lint-analysis.js  create-client-user.js  create-client-user.ts  debug-auth-logic.ts  debug-auth.js  debug-create-user.ts  debug-login.ts  docker-compose.yml  eslint.config.mjs  find-critical-lints.js  jest.config.ts  list-lint-files.js  middleware.ts  next.config.ts  package.json  playwright.config.ts  prisma.config.ts  review_report.md  tailwind.config.ts  tsconfig.json
mobile_docs/: 00_移动端开发总览.md  01_技术架构设计.md  02_功能模块设计.md  (+4 more)
(+1061 files in other folders)
